[refactor #13] UserResponse toList()를 collect로 수정